--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Reflection.ReflectionActivity" />
         <activity android:name=".ReplaceActivity" />
         <activity android:name=".SearchActivity" />
+        <activity android:name=".ScreenActivity"></activity>
     </application>
 
 </manifest>
