--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity android:name=".ReplaceActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".ScreenActivity"></activity>
+
+        <meta-data
+            android:name="CHANNEL"
+            android:value="${CHANNEL_VALUE}" />
     </application>
 
 </manifest>
