--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ThreadActivity" />
+        <activity android:name=".Thread.ThreadActivity" />
         <activity android:name=".File.FileActivity" />
         <activity android:name=".Reflection.ReflectionActivity" />
         <activity android:name=".ReplaceActivity" />
@@ -30,6 +30,7 @@
         <meta-data
             android:name="CHANNEL"
             android:value="${CHANNEL_VALUE}" />
+
     </application>
 
 </manifest>
