--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,20 +55,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
 
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:support-annotations:25.2.0'
-//    Error:Conflict with dependency 'com.android.support:support-annotations' in project ':app'.
+    //    Error:Conflict with dependency 'com.android.support:support-annotations' in project ':app'.
 //    Resolved versions for app (25.2.0) and test app (23.1.1) differ.
 //    See http://g.co/androidstudio/app-test-app-conflict for details.
 //    androidTestCompile 'com.android.support.test:rules:0.5'
 //    androidTestCompile 'com.android.support.test:runner:0.5'
 //    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
 //    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:support-annotations:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
     testCompile 'junit:junit:4.12'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 }
