--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.squareup.haha:haha:2.0.3'
 }
