register intent service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             </intent-filter>
         </service>
         <service android:name=".Service.MyBindService" />
+        <service android:name=".Application.InitializeService" />
 
     </application>
 
