--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.squareup.haha:haha:2.0.3'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.13'
+
 }
