--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'AndResGuard'
 
 android {
     compileSdkVersion 25
@@ -77,4 +78,33 @@ dependencies {
     compile 'com.squareup.haha:haha:2.0.3'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.13'
 
+}
+
+andResGuard {
+    // mappingFile = file("./resource_mapping.txt")
+    mappingFile = null //指定旧的mapping文件，保证同一资源文件在不同版本混淆后的名称保持一致。若在命令行设置会覆盖config.xml中的信息。
+    use7zip = true
+    useSign = true
+    // 打开这个开关，会keep住所有资源的原始路径，只混淆资源的名字
+    keepRoot = false
+    whiteList = [
+            // 你的图标
+            "R.drawable.icon",
+            // for fabric
+            "R.string.com.crashlytics.*",
+            // for onekeyshare update
+            "R.string.ssdk*",
+            "R.drawable.ssdk*",
+    ]
+    compressFilePattern = [
+            "*.png",
+            "*.jpg",
+            "*.jpeg",
+            "*.gif",
+            "resources.arsc"
+    ]
+    sevenzip {
+        artifact = 'com.tencent.mm:SevenZip:1.2.3'
+        //path = "/usr/local/bin/7za"
+    }
 }
