--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,18 +55,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    Error:Conflict with dependency 'com.android.support:support-annotations' in project ':app'.
-//    Resolved versions for app (25.2.0) and test app (23.1.1) differ.
-//    See http://g.co/androidstudio/app-test-app-conflict for details.
-//    androidTestCompile 'com.android.support.test:rules:0.5'
-//    androidTestCompile 'com.android.support.test:runner:0.5'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    //    Resolved versions for app (25.2.0) and test app (23.1.1) differ.
+    //    See http://g.co/androidstudio/app-test-app-conflict for details.
+    //    androidTestCompile 'com.android.support.test:rules:0.5'
+    //    androidTestCompile 'com.android.support.test:runner:0.5'
+    //    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
+    //    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-annotations:25.3.1'
@@ -80,6 +79,8 @@ dependencies {
     //parceler
     compile 'org.parceler:parceler-api:1.1.8'
     annotationProcessor 'org.parceler:parceler:1.1.8'
+    //zxing qr code
+    compile files('src/libs/core-3.3.0.jar')
 }
 
 andResGuard {
