--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".MVP.view.UserLoginActivity" />
         <activity android:name=".OpenGL.TestOpenGLActivity" />
         <activity android:name=".HookActivity" />
+        <activity android:name=".ImageActivity" />
 
         <meta-data
             android:name="CHANNEL"
@@ -64,8 +65,6 @@
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
         </receiver>
-
-        <activity android:name=".ImageActivity"></activity>
     </application>
 
 </manifest>
